PDF annotator toolbar visibilty issues resoloved

--- a/dn_documents/static/annotator/shared/custom.css
+++ b/dn_documents/static/annotator/shared/custom.css
@@ -1,6 +1,5 @@
   #annotated-doc-conatiner
   {
-      display: none;
       z-index: 21;
       background: #fff;
       position: relative;
